--- a/HTML FOLDER/Files.html
+++ b/HTML FOLDER/Files.html
@@ -17,16 +17,16 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-center">
-                    <li><a href="../overview.html">
-                        <img src="../Pictures/OVERVIEW11.png" alt=""> Overview</a></li>
-                    <li><a href="../patients.html">
-                        <img src="../Pictures/patients.png" alt=""> Patients</a></li>
-                    <li><a href="../schedule.html">
-                        <img src="../Pictures/schedule.png" alt=""> Schedule</a></li>
-                    <li><a href="../Messages.html">
-                        <img src="../Pictures/Message.png" alt=""> Messages</a></li>
-                    <li class="active"><a href="./Files.html">
-                        <img src="../Pictures/Files.png" alt=""> Files</a></li>
+                    <li class="active"><a href="../Hospitalproject/HTML FOLDER/overview.html">
+                      <img src="Pictures/OVERVIEW11.png" alt="">Overview</a></li>
+                    <li><a href="../Hospitalproject/HTML FOLDER/patients.html">
+                      <img src="Pictures/patients.png" alt="">Patients</a></li>
+                    <li><a href="../Hospitalproject/HTML FOLDER/schedule.html">
+                      <img src="Pictures/schedule.png" alt="">Schedule</a></li>
+                    <li><a href="../Hospitalproject/HTML FOLDER/Messages.html">
+                      <img src="Pictures/Message.png" alt="">Messages</a></li>
+                    <li><a href="HTML FOLDER/Files.html">
+                      <img src="../Hospitalproject/HTML FOLDER/Files.html" alt="">Files</a></li>
                 </ul>
             </div>
             <div class="profile-card navbar-right">
