--- a/HTML FOLDER/schedule.html
+++ b/HTML FOLDER/schedule.html
@@ -16,22 +16,17 @@
                 </a>
             </div>
             <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-center" id="nav-links">
-                    <li><a href="overview.html" data-page="overview">
-                        <img src="Pictures/OVERVIEW11.png" alt="">Overview</a>
-                    </li>
-                    <li><a href="patients.html" data-page="patients">
-                        <img src="Pictures/patients.png" alt="">Patients</a>
-                    </li>
-                    <li class="active"><a href="schedule.html" data-page="schedule">
-                        <img src="Pictures/schedule.png" alt="">Schedule</a>
-                    </li>
-                    <li><a href="./HTML FOLDER/Messages.html" data-page="messages">
-                        <img src="Pictures/Message.png" alt="">Messages</a>
-                    </li>
-                    <li><a href="HTML FOLDER/Files.html" data-page="files">
-                        <img src="./Pictures/Files.png" alt="">Files</a>
-                    </li>
+                <ul class="nav navbar-nav navbar-center">
+                    <li class="active"><a href="../Hospitalproject/HTML FOLDER/overview.html">
+                      <img src="Pictures/OVERVIEW11.png" alt="">Overview</a></li>
+                    <li><a href="../Hospitalproject/HTML FOLDER/patients.html">
+                      <img src="Pictures/patients.png" alt="">Patients</a></li>
+                    <li><a href="../Hospitalproject/HTML FOLDER/schedule.html">
+                      <img src="Pictures/schedule.png" alt="">Schedule</a></li>
+                    <li><a href="../Hospitalproject/HTML FOLDER/Messages.html">
+                      <img src="Pictures/Message.png" alt="">Messages</a></li>
+                    <li><a href="HTML FOLDER/Files.html">
+                      <img src="../Hospitalproject/HTML FOLDER/Files.html" alt="">Files</a></li>
                 </ul>
             </div>
             <div class="profile-card navbar-right">
